--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,29 +1,38 @@
-﻿
+﻿@{ 
+    var videos = (ViewData["videos"] as List<StudyEnglish.Models.Video>);
+}
 @{
     ViewBag.Title = "Home Page";
 }
-    <main style="height: 100vh">
+    <main class="mt-3">
         <div id="bbcle-content" class="content-no-sidebar b-g-p">
-            <div role="article" class="mt-5">
 
-                @foreach(var category in ViewData["categories"] as List<StudyEnglish.Models.DanhMuc>)
-            {
-                    <span class="d-flex flex-column" style="font-size: 16px;">@(category.tenDanhMuc)</span>
-            }
-                <div class="col-4 mt-3">
-                    <div class="card w-100 align-items-center">
-                        <img style="width: 100px; height: 100px; margin: 0 auto" src="https://pdp.edu.vn/wp-content/uploads/2021/01/hinh-anh-cute-de-thuong.jpg" class="card-img-top" alt="...">
-                        <div class="card-body d-flex flex-column">
-                            <h5 class="card-title">English in a Minute- Tone Deaf</h5>
-                            <p class="card-text text-center">Decripttion</p>
-                            <a href="/" class="btn btn-primary">Học ngay</a>
-                        </div>
-                    </div>
-                </div>
+                @foreach (var category in ViewData["categories"] as List<StudyEnglish.Models.DanhMuc>)
+                {
+                   <div role="article" class="mt-3">
+                    <span style="font-size: 16px;">@(category.tenDanhMuc)</span>
+                       <div class="d-flex gap-4">
 
-                
+                           @for (int i = 0; i < videos.Count; i++)
+                           {
+                               if (i < 3)
+                               {
+                                    <div class="col-4 mt-3">
+                                        <div class="card w-100 align-items-center">
+                                            <img style="width: 100px; height: 100px; margin: 0 auto" src="https://pdp.edu.vn/wp-content/uploads/2021/01/hinh-anh-cute-de-thuong.jpg" class="card-img-top" alt="...">
+                                            <div class="card-body d-flex flex-column">
+                                                <h5 class="card-title">@(videos[i].tenVideo)</h5>
+                                                <p class="card-text text-center">Decripttion</p>
+                                                <a href="/Video/@(videos[i].maVideo)" class="btn btn-primary">Học ngay</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                               }
+                           }
+                           </div>
+                       </div>
+                }
 
                 <div class="clearfix"></div>
-            </div>
         </div>
     </main>
